# kry

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SPEC.md  SUPPORT.md  build_backend.py  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  allowed_signers  build-requirements.txt  dependabot.yml
docs/: AUDIT_2026_06_23.md  AUDIT_2026_06_27.md  CLAIMS_BOUNDARY.md  KRY_A_PLUS_PATH.md  KRY_BIOMIMICRY.md  KRY_COUNTERFACTUAL_HOLDOUT.md  KRY_FIRST_REAL_ANCHOR.md  KRY_LITELLM.md  KRY_READINESS.md  KRY_RESEARCH_GRADE_ANCHOR.md  KRY_SAVINGS_ANALYSIS.md  KRY_SELF_HOSTED_TEE_RESEARCH_2026_06_06.md  KRY_T2_FINDINGS_REPORT.md  KRY_TEE_OPTIONS.md  KRY_TOKEN_SPEC.md  KRY_VERACITY_BINDING.md  KRY_VERIFIED_SAVINGS_ARTIFACT.md  RELEASE_CHECKLIST.md  SPEC_DEVELOPMENT.md  VERIFIABLE_LLM_FINOPS.md
examples/: demo.sh  gen_dataset.py  gen_rescue_battery.py  kry_litellm_shim.py  sample_usage_log.jsonl  try_kry.py  try_kry_action.py
kry_pqc/: README.md  __init__.py  requirements.txt  signer.py  test_kry_pqc.py  threshold.py  verify.py
lab/: PLAYBOOK.md  README.md  RESULTS_TEMPLATE.md  compute_truth.py  concurrency_check.py  energy_report.py  holdout_truth_check.py  hole_d_double_spend.py  hole_d_lease.py  make_prompts.py  multinode_witness_demo.sh  node.py  ollama_adequacy_probe.py  ollama_gsm8k_oracle.py  ollama_selfconsistency_gate.py  reproduce.sh  router.py  routes.example.json  run_local.py
media/: kry-demo.tape
poc/nitro/enclave/: Cargo.toml  Dockerfile
poc/nitro/enclave/src/: main.rs
scripts/: check_attribution.py  kry_action_mcp.py  kry_action_verify.py  kry_artifact_io.py  kry_artifact_privacy.py  kry_chain_anchor.py  kry_cod_experiment.py  kry_code_routing_proof.py  kry_compute_wall.py  kry_correctness_layer.py  kry_doctor.py  kry_finops_report.py  kry_gate_specificity.py  kry_grounded_savings_openai.py  kry_grounded_savings_proof.py  kry_gsm8k_savings_proof.py  kry_litellm_callback.py  kry_multiturn_prefix_savings.py  kry_or_fetch.py  kry_paid_avoided_proof.py  kry_ratelimit_probe.py  kry_reconcile.py  kry_release_verify.py  kry_rescue_code.py  kry_rescue_experiment.py  kry_rescue_gsm8k.py  kry_research_grade.py  kry_savings_report.py  kry_shadow_demo.py  kry_shadow_demo_humaneval.py  kry_shadow_emitter.py  kry_shadow_sim.py  kry_snp_verify.py  kry_spider_slice.py  kry_sql_slice.py  kry_tee_verify.py  kry_tlsn_adapter.py  kry_tlsn_verify.py  kry_verified_artifact.py  kry_verify.py  (+2 more)
tests/: conftest.py  test_action.py  test_action_concurrency.py  test_artifact_privacy.py  test_audit_deep_external.py  test_audit_lows.py  test_audit_round5.py  test_audit_round_debug.py  test_audit_settlement.py  test_baseline.py  test_build_backend.py  test_capabilities.py  test_carbon.py  test_check_attribution.py  test_concurrency_persistence.py  test_concurrent_mint.py  test_core_accounting_json_boundaries.py  test_cross_node_witness.py  test_doctor.py  test_external_verify.py  test_finops_report.py  test_hardening.py  test_independent_audit.py  test_kry_settlement.py  test_kry_token.py  test_lab_helpers.py  test_lab_hole_d.py  test_lab_json_boundaries.py  test_lab_router.py  test_lab_turnkey.py  test_litellm_callback.py  test_malicious_packet_fixtures.py  (+17 more)
(+124 files in other folders)
